# Agora

./: .clang-format  .gitignore  .kevin_clang_format  .min-clang-format  .ycm_extra_conf.py  Agora_doxygen.conf  CH_.txt  CMakeLists.txt  CONTRIBUTING.md  CoMP.cpp  CoMP.hpp  CoMP_origin.cpp  DPDK_README.md  INTELLIB_README.md  Jenkinsfile  LICENSE  README.md  SchedulerInstruction.md  Symbols.hpp  arma_test.cc  bench_overhead.cpp  bs.py  buffer.hpp  build_for_docker.sh  client.py  concurrentqueue.h  config_ci.sh  cpu_attach.cpp  cpu_attach.hpp  data.bin.REMOVED.git-id  dataconf.py  dockerize.sh  equaled_data.txt  example_dataset.hdf5  format.sh  generate_data.m  generate_dataset.py  hyper.sh  log2data-ue.sh  main.cpp  (+39 more)
.githooks/: post-checkout  templateReadmeCIBadgeHook.sh
Tom_PAAM_Control/: main.py  mimo.py
analysis/: ber.py
cmake/: Finddpdk.cmake  intel-compile-options.cmake
config/: bm_run.json  config.json  deploy.json  deploy_msr.json  deploy_msr_128_16.json  deploy_msr_128_32.json  deploy_msr_256_16.json  deploy_msr_64_16.json  platform.json  platform_msr.json  run.json  template.json  template_msr.json  template_msr_128_16.json  template_msr_128_32.json  template_msr_256_16.json  template_msr_256_32.json  template_msr_64_16.json
data/: beacon.txt  bs-dl-hw-cal.json  bs-dl-hw.json  bs-dl-powder-2.json  bs-dl-sim.json  bs-hub-serial.txt  bs-iris-serials.txt  bs-mac-dl-sim.json  bs-mac-sim.json  bs-mac-ul-sim.json  bs-one-ul-hw.json  bs-sim.json  bs-ul-hw.json  bs-ul-powder-2.json  bs-ul-sim.json  bs-ul-usrp.json  bs-usrp-addr.txt  bs_topology.json  bs_topology_renewlab.json  cdf.cpp  chsim.json  conc_logger_conf.json  config-remote-subcarrier-sim-ul.json  dl-hw.json  dl-merlin.json  dl-powder.json  dl-sim.json  dl-vulture-listener.json  dl-vulture.json  dl_ifft_data_2048_ant8.bin.REMOVED.git-id  fig_cdf_latency.py  fig_latency.sh  fig_quant_latency.py  frame_gap_analysis.py  frame_latency_all_0.txt  get_cpu_usage.py  get_time_series.py  iris_serials.txt  latency_analysis.sh  lts.txt  (+52 more)
data/data_generator/: CMakeLists.txt  data_generator.cpp  data_generator.h
docker/: .gitignore  Dockerfile  build_for_docker.sh  create_service_principal.sh  pod.yaml  run_agora.sh  run_both.sh  run_millipede.sh  run_sender.sh
images/: bs+ue.pdf.REMOVED.git-id  bs_2ue.png.REMOVED.git-id  hw-zoomin.png.REMOVED.git-id  sampleMatlab.png.REMOVED.git-id
log/: rx_bs.txt  rx_ue.txt  rx_ue2.txt  rx_ue3.txt  rx_ue321.txt  rx_ue321_160f.txt  rx_ue321_50.txt  rx_ue321_70.txt  rx_ue321_ideal.txt  rx_ue654.txt  rx_ue654_ideal.txt  rx_ue876.txt  rx_ue876_160f.txt  rx_ue876_360f.txt  rx_ue876_50.txt  rx_ue876_ideal.txt  rx_ue_2.txt  rx_ue_3.txt  rx_ue_4.txt  rx_ue_5.txt  rx_ue_6.txt  rx_ue_7.txt  rx_ue_8.txt  tx_bs.txt
matlab/: find_lts.py  generate_data.m  generate_data_dl.m  generate_uplink.m  hdf5_lib.py  inspect_agora_results.m  inspect_agora_ul_results.m  inspect_single_frame.m  mod_sym.m  (+16 more)
simulator/: CMakeLists.txt  channel.cc  channel.cpp  channel.h  channel.hpp  channel_sim.cc  channel_sim.cpp  channel_sim.h  channel_sim.hpp  chsim_main.cc  chsim_main.cpp  chsim_worker_storage.h  dynamic_sender.cpp  dynamic_sender.hpp  dynamic_sender_cli.cpp  main.cc  main.cpp  packageReceiver.cpp  packageReceiver.hpp  packageSender.cpp  packageSender.hpp  receiver.cc  receiver.cpp  receiver.h  receiver.hpp  sender.cc  sender.cpp  sender.h  sender.hpp  sender_cli.cc  sender_cli.cpp  sender_dpdk.cpp  sender_merge.cpp  sim_utils.hpp  simulator.cc  simulator.cpp  simulator.h  simulator.hpp  time_frame_counters.h
simulator/channel_models/: awgn_model.h  channel_model.cc  channel_model.h  dataset_model.cc  dataset_model.h  example_model.h  rayleigh_model.h
simulator/datasets/: 16_4_16_clu2_all.hdf5  16_4_16_clu2_all.hdf5.REMOVED.git-id  32_4_512_10_rayleigh_dataset.hdf5.REMOVED.git-id  32_4_512_50_rayleigh_dataset.hdf5.REMOVED.git-id  64_4_16.hdf5.REMOVED.git-id  reference_dataset.hdf5
src/sender/: CMakeLists.txt  packageSender.cpp  packageSender.hpp  sender_cli.cpp
test/: .gitignore  CMakeLists.txt  cpu_attach.cpp  testTranspose.cpp  test_fft_mkl.c  test_matrix.cpp  test_modulation.cpp  test_zf.cc
test/benchmark/: benchmark.cpp  benchmark.json  benchmark_ht.cpp
test/compute_kernels/: CMakeLists.txt  Makefile  cpu_attach.cc  cpu_attach.h  cpu_attach.hpp  testTranspose.cpp  test_fft_mkl.c  test_fft_mkl.cc  test_matrix.cc  test_matrix.cpp  test_modulation.cc  test_modulation.cpp  test_mufft.c  test_mufft.cc  test_transpose.cc
test/compute_kernels/ldpc/: CMakeLists.txt  create_makefile.sh  test_decode_spec.cpp  test_ldpc.cc  test_ldpc.cpp  test_ldpc_baseband.cc  test_ldpc_baseband.cpp  test_ldpc_flexran.cpp  test_ldpc_mod.cc  test_ldpc_mod.cpp  test_mod_ldpc.cpp
test/compute_kernels/test_coding_mod/: CMakeLists.txt
test/ldpc/: .ycm_extra_conf.py  CMakeLists.txt  test_ldpc.cpp
test/radio_test/: SoapyRPCSocket.cpp  SoapyRPCSocket.hpp  SoapySocketDefs.hpp  main.cc  radio_calibrate_mod.cc  radio_data_plane.cc  radio_data_plane.h  radio_data_plane_soapy.cc  radio_data_plane_soapy.h  radio_data_plane_socket.cc  radio_data_plane_socket.h  radio_lib_mod.cc  radio_lib_mod.h  radio_socket.cc  radio_socket.h
test/sim_tests/: dl-mww-sim.sh  test_e2e_dataset_sim.sh  test_e2e_sim.sh  ul-mww-sim.sh  uldl-mww-sim.sh
test/test_agora/: .gitignore  main.cc  main.cpp  test_agora.sh  test_agora_new.sh
test/test_ber/: test_ber.sh
test/test_coding_mod/: .ycm_extra_conf.py  CMakeLists.txt  test_ldpc.cpp  test_mod_ldpc.cpp
test/test_millipede/: .gitignore  CMakeLists.txt  main.cpp  test_millipede.sh
test/unit_tests/: test_256qam_demod.cc  test_arma_cube_slice_2x2.cc  test_armadillo.cc  test_avx512_complex_mul.cc  test_batch_mat_inv.cc  test_batch_mm.cc  test_cfo.cc  test_concurrent_queue.cc  test_ctrl_channel.cc  test_datatype_conversion.cc  test_demul_threaded.cc  test_equal.cc  test_equal_time.cc  test_ldpc_worker.cc  test_mac_thread.cc  test_ptr_grid.cc  test_recipcal.cc  test_remote_ldpc.cc  test_scrambler.cc  test_simd.cc  test_simd_store.cc  test_udp_client_server.cc  test_zf.cc  test_zf_threaded.cc
(+1546 files in other folders)
